k3s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app.kubernetes.io/locallibary: locallibary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/locallibary: locallibary
  template:
    metadata:
      labels:
        app.kubernetes.io/locallibary: locallibary
    spec:

      containers:
      - name: locallibary
        image: registry.gitlab.com/mocoloco461/django_locallibary/locallibary:prodtest
        ports:
        - containerPort: 8000
        
        command: ["/bin/bash", "-c"]
        args:
          - |
            python manage.py collectstatic --no-input &&
            gunicorn locallibary.wsgi:application --bind 0.0.0.0:8000
