k3s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgres-deployment
  labels:
    app.kubernetes.io/postgres: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/postgres: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/postgres: postgres
    spec:
    
      containers:
      - name: postgres
        image: postgres:15
        ports:
          - containerPort: 5432

        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-volume

      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-pvc
