k3s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: locallibary
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/locallibary: locallibary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
