k3s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/postgres: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
