k3s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locallibary-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:        
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locallibary
            port:
              number: 80
